[tool.poetry]
name = "string-searcher"
version = "0.1.0"
description = "Search all files in a directory for a given string."
authors = ["Mitch Haddadi <12067255+dfirsec@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "string_searcher"}]

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
